[package]
name = "janus-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types and configuration for Janus web server"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
