[package]
name = "janus-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Janus web server and reverse proxy with live reloading"

[[bin]]
name = "janus"
path = "src/main.rs"

[dependencies]
janus-common = { path = "../janus-common" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
notify = "6.1"
