[package]
name = "janus-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "TUI management interface for Janus server"

[[bin]]
name = "janus-tui"
path = "src/main.rs"

[dependencies]
janus-common = { path = "../janus-common" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
